<resources>
    <string name="app_name">MrMecanico</string>
    <string name="string_usuario">Usuario</string>
    <string name="string_contrasena">Contraseña</string>
    <string name="string_forgot_password">¿Olvidó la contraseña?</string>
    <string name="string_registro">Registro</string>
    <string name="string_iniciar_sesion">Iniciar sesión</string>
    <string name="string_datos_personales">DATOS PERSONALES</string>
    <string name="string_nombre">Nombre</string>
    <string name="string_correo_electronico">Correo electrónico</string>
    <string name="string_telefono">Teléfono</string>
    <string name="string_datos_automovil">DATOS DEL AUTOMÓVIL</string>
    <string name="string_marca">Marca</string>
    <string name="string_modelo">Submarca/Modelo</string>
    <string name="string_modelo_2">Modelo</string>
    <string name="string_kilometraje">Kilometraje</string>
    <string name="string_anio">Año</string>
    <string name="string_registrarme">REGISTRARME</string>
    <string name="string_autos">Mis automóviles</string>
    <string name="string_perfil">Perfil de usuario</string>
    <string name="string_paquetes">Paquetes</string>
    <string name="string_paquetes_disponibles">Paquetes Disponibles</string>
    <string name="string_incluye">Incluye:</string>
    <string name="string_talleres">Talleres</string>
    <string name="string_mapa_talleres">Mapa de Talleres</string>
    <string name="string_citas">Citas</string>
    <string name="string_citas_programadas">Citas Programadas</string>
    <string name="string_notificaciones">Notificaciones</string>
    <string name="string_agendar">Agendar</string>
    <string name="string_agendar_cita">Agendar Cita</string>
    <string name="string_selecciona_fecha">Selecciona Fecha y Hora</string>
    <string name="string_selecciona_taller">Selecciona un Taller</string>
    <string name="string_placa">Placa</string>
    <string name="string_error_nombre">El campo nombre no puede estar vacio</string>
    <string name="string_error_correo">El campo correo no puede estar vacio</string>
    <string name="string_error_correo_format">El formato de correo electrónico es inválido</string>
    <string name="string_error_telefono">El campo teléfono no puede estar vacio</string>
    <string name="string_error_telefono_format">Tu teléfono debe contener 10 dígitos</string>
    <string name="string_error_contrasena">El campo contraseña no puede estar vacio</string>
    <string name="string_error_contrasena_format">Tu contrasenña es demasiado corta</string>
    <string name="string_error_placa">El campo placa no puede estar vacio</string>
    <string name="string_error_marca">Selecciona la marca de tu vehículo</string>
    <string name="string_error_modelo">Selecciona el modelo de tu vehículo</string>
    <string name="string_error_anio">Selecciona el año de tu vehículo</string>
    <string name="string_error_kilometraje">Selecciona el kilometraje aproximado de tu vehículo</string>
    <string name="string_select_image">Seleccionar imagen</string>
    <string name="string_camara">Desde cámara</string>
    <string name="string_galeria">Desde galería</string>
    <string name="string_seleccionar_auto">Seleccionar automóvil</string>
    <string name="string_paquete_inexistente">Lo sentimos, no existen paquetes que coincidan con los datos de tu vehículo</string>
    <string name="string_fecha">Fecha</string>
    <string name="string_hora">Hora</string>
    <string name="string_fecha_cita">Selecciona una fecha para tu cita</string>
    <string name="string_hora_cita">Selecciona una hora para tu cita</string>
    <string name="string_paquete_eliminado">El paquete ha sido eliminado del sistema</string>
    <string name="string_taller_eliminado">El taller ha sido eliminado del sistema</string>
    <string name="string_agregar_auto">Agregar Automóvil</string>
    <string name="string_agregar">Agregar</string>
    <string name="string_cancelar">Cancelar</string>
    <string name="string_vehiculo_agregado_exito">Su vehículo fue agregado con éxito</string>
    <string name="string_vehiculo_agregado_fail">No fue posible agregar su vehículo</string>
    <string name="string_eliminar_vehiculo">¿Seguro que deseas eliminar este vehículo?</string>
    <string name="string_eliminar">Eliminar</string>
    <string name="string_vehiculo_eliminado_exito">Su vehículo fue eliminado con éxito</string>
    <string name="string_vehiculo_eliminado_fail">No fue posible eliminar su vehículo</string>
    <string name="string_cerrar_sesion">Cerrar sesión</string>
    <string name="string_cerrar_sesion_confirm">¿Seguro que deseas cerrar la sesión?</string>
    <string name="string_aceptar">Aceptar</string>
    <string name="string_editar_perfil">Editar Perfil</string>
    <string name="string_guardar">Guardar</string>
    <string name="string_error_perfil">Error al actualizar el perfil</string>
    <string name="string_exito_perfil">Perfil actualizado con éxito</string>
    <string name="string_guardando">Guardando cambios</string>
    <string name="string_sin_citas">Por el momento no tienes citas agendadas</string>
    <string name="string_informacion_cliente">INFORMACIÓN DEL CLIENTE</string>
    <string name="string_informacion_orden">INFORMACIÓN DE LA ORDEN</string>
    <string name="string_paquete">Paquete</string>
    <string name="string_taller">Taller</string>
    <string name="string_vehiculo">Vehículo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
