<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="14dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPerfil"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:visibility="gone"
                app:srcCompat="@android:color/transparent" />

            <FrameLayout
                android:id="@+id/flCamara"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/round_element"
                android:padding="20dp">

                <ImageButton
                    android:id="@+id/ivImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/camera" />

            </FrameLayout>

            <TextView
                android:id="@+id/textView"
                style="@style/TextPrimaryMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/string_datos_personales" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/string_nombre"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                android:hint="@string/string_correo_electronico"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/string_telefono"
                android:inputType="phone"
                android:maxLength="10"
                android:textAlignment="center"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                android:textColor="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/etContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/string_contrasena"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextPrimaryMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/string_datos_automovil" />

            <EditText
                android:id="@+id/etPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                android:hint="@string/string_placa"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                style="@style/TextSecondaryMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="16dp"
                android:text="@string/string_marca" />

            <Spinner
                android:id="@+id/spMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                app:layout_constraintTop_toBottomOf="@+id/tvNombre5" />

            <TextView
                style="@style/TextSecondaryMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="16dp"
                android:text="@string/string_modelo" />

            <Spinner
                android:id="@+id/spModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                app:layout_constraintTop_toBottomOf="@+id/tvNombre5" />

            <TextView
                style="@style/TextSecondaryMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="16dp"
                android:text="@string/string_anio" />

            <Spinner
                android:id="@+id/spAnio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                app:layout_constraintTop_toBottomOf="@+id/tvNombre5" />

            <TextView
                style="@style/TextSecondaryMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="16dp"
                android:text="@string/string_kilometraje" />

            <Spinner
                android:id="@+id/spKilometraje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                app:layout_constraintTop_toBottomOf="@+id/tvNombre5" />

            <Button
                android:id="@+id/btnRegistrarme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="34dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/button_register"
                android:elevation="4dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingLeft="44dp"
                android:paddingRight="44dp"
                android:text="@string/string_registrarme" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>