<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="40dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/string_select_image"
        android:theme="@style/TextPrimaryLg" />

    <LinearLayout
        android:id="@+id/llCamara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_camera" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextPrimaryMd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:padding="8dp"
            android:text="@string/string_camara" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llGaleria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_gallery" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextPrimaryMd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="7dp"
            android:layout_weight="0"
            android:padding="8dp"
            android:text="@string/string_galeria" />

    </LinearLayout>
</LinearLayout>